<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Actividad extends Model
{
    protected $fillable = [
        'nombre',
        'dia',
        'horario',
    ];

    public function animals()
    {
        return $this->belongsToMany('App\Models\Animal' , 'animal_id');
    }
}
