@startuml "MATIAS"

class models.Animal{
    especie_id:integer
    recinto_id:integer
    actividad_id:integer
    edad:integer
}
class models.Especie{
    nombre_cientifico:string
    nombre_comun:string
    description:string
}

class models.Recinto{
    capacidad:integer
    nombre:string
    description:string
}

class models.Cuidador{
    nombres:string
    apellidos:string
    edad:integer
    especialidad:string
}
class models.CuidadorAnimal{
    cuidador_id:integer
    animal_id:integer
}
class models.Actividad{
    nombre:string
    dia:string
    horario:string
}


class controllers.Animal{
    resource()

}
class controllers.Especie{
    resource()
}

class controllers.Recinto{
    resource()
}

class controllers.Cuidador{
    resource()

}
class controllers.Cuidador_Animal{
    resource()

}
class controllers.Actividad{
    resource()

}

models.Especie "1" -- "*" models.Animal
models.Recinto "1" -- "*" models.Animal
models.Actividad "*" -- "*" models.Animal
models.Cuidador "1" -- "*" models.CuidadorAnimal
models.Animal "1" -- "*" models.CuidadorAnimal

@enduml
